<resources>
    <string name="appName">WinterFinal-EnglishTest</string>
    <string name="imageWelcome">imageWelcome</string>
    <string name="listening">Listening</string>
    <string name="reading">Reading</string>
    <string name="navigationDrawerOpen">Open navigation drawer</string>
    <string name="navigationDrawerClose">Close navigation drawer</string>
    <string name="navHeaderTitle">Trần Văn Hưng</string>
    <string name="navHeaderSubtitle">tranvanhung10091996@gmail.com</string>
    <string name="navHeaderDesc">Navigation header</string>
    <string name="actionSettings">Settings</string>
    <string name="part5Basic">Part 5 - Basic</string>
    <string name="part5Intermediate">Part 5 - Intermediate</string>
    <string name="part5Advanced">Part 5 - Advanced</string>
    <string name="p5Basic">P5 - Basic -</string>
    <string name="p5Intermediate">P5 - Intermediate -</string>
    <string name="p5Advanced">P5 - Advanced -</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="toeicPractice">TOEIC Practice Reading</string>
    <string name="practice">Practice</string>
    <string name="time">Time</string>
    <string name="score">Score</string>
    <string name="timeDefault">00:00</string>
    <string name="scoreDefault">0</string>
    <string name="level">Level</string>
    <string name="submit">SUBMIT</string>
    <string name="questionDetailHere">Question Detail Here</string>
    <string name="confirmExit">Confirm Exit</string>
    <string name="doYouWantToExit">Do you want to exit?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="correct">Correct</string>
    <string name="duration">Duration</string>
    <string name="congratulations">Congratulations!</string>
    <string name="position">position</string>
    <string name="loadingData">Loading data...</string>
    <string name="review">review</string>
    <string name="exit">exit</string>
    <string name="fileName">timescore</string>
    <string name="explanation">Giải thích:</string>
    <string name="translation">Dịch:</string>
    <string name="part1">Part 1</string>
    <string name="part2">Part 2</string>
    <string name="part3">Part 3</string>
    <string name="part4">Part 4</string>
    <string name="part6">Part 6</string>
    <string name="part7">Part 7</string>
    <string name="optionD">D.</string>
    <string name="optionC">C.</string>
    <string name="optionB">B.</string>
    <string name="optionA">A.</string>
    <string name="grammar">Grammar</string>
    <string name="toeicIntroduction">TOEIC Introduction</string>
    <string name="word">Words</string>
    <string name="wordStudy">Word Study</string>
    <string name="study">Study</string>
    <string name="networkNotification">No Internet connection!</string>
    <string name="settings">Settings</string>
    <string name="showAnswer">Show Answer</string>
    <string name="switchShowAnswer">Switch on to show correct answers and explanations immediately after selecting
        answers
    </string>
    <string name="endTest">End Test</string>
    <string name="doYouWantToLeaveThisTest">Do you want to leave this test without submitting?</string>
    <string name="stay">Stay</string>
    <string name="leave">Leave</string>
</resources>
