<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_test_result">

    <android.support.v7.widget.CardView
            android:id="@+id/cardViewResult"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/dimen10dp"
            android:layout_marginStart="@dimen/dimen10dp"
            android:layout_marginEnd="@dimen/dimen10dp"
            app:cardBackgroundColor="@color/colorTransparent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCorrect"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/dimen20dp"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="50dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvCOngratulations"
                    android:textSize="@dimen/dimen16dp"/>

            <android.support.constraint.Guideline
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintGuide_begin="190dp"
                    android:id="@+id/guideline"/>

            <TextView
                    android:text="@string/scoreDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCorrectAnswer"
                    android:textSize="@dimen/dimen16dp"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="50dp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintTop_toBottomOf="@+id/tvCOngratulations"/>

            <TextView
                    android:text="@string/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDuration"
                    android:layout_marginTop="@dimen/dimen20dp"
                    android:layout_marginStart="@dimen/dimen20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvCorrect"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dimen16dp"/>

            <TextView
                    android:text="@string/timeDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen16dp"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/tvDurationTime"
                    android:layout_marginTop="@dimen/dimen20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvCorrectAnswer"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    android:layout_marginStart="@dimen/dimen10dp"/>

            <TextView
                    android:text="@string/congratulations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCOngratulations"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/colorYellow"
                    android:textSize="@dimen/dimen20dp"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <Button
            android:id="@+id/btnReview"
            android:layout_width="@dimen/dimen100dp"
            android:layout_height="@dimen/dimen50dp"
            android:layout_below="@+id/cardViewResult"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen20dp"
            android:text="@string/review"
            android:textColor="@color/colorBlack"
            android:background="@drawable/bg_buttons"/>

    <Button
            android:id="@+id/btnExit"
            android:layout_width="@dimen/dimen100dp"
            android:layout_height="@dimen/dimen50dp"
            android:layout_below="@+id/btnReview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen20dp"
            android:text="@string/exit"
            android:textColor="@color/colorBlack"
            android:background="@drawable/bg_buttons"/>

</RelativeLayout>
